R53 review fixes: order-preserving maps, cross-axis @condition tests, path-step errors
Review surfaced five issues; this commit addresses all of them while
keeping R53 in `In Review`.

Order preservation (blocker; tests were red).
- `ArgBindingMap.parseArgMapping` and `of` now wrap their `LinkedHashMap`
  with `Collections.unmodifiableMap` instead of `Map.copyOf`. The latter
  produces an `ImmutableCollections.MapN` whose iteration order is
  hash-based, causing `parseArgMapping_multipleEntries_preservesOrder` and
  `parseArgMapping_textBlockWithNewlines_isAccepted` to fail. The
  parser's documented behaviour and the test names both expect insertion
  order to survive.

Path-step @condition error surfacing.
- `BuildContext.resolveConditionRef` previously returned `null` on any
  failure and the caller emitted a generic "condition method '…' could
  not be resolved" message that mentioned neither argMapping nor the
  parser/typo. It now returns a `ConditionResolution(ref, error)` record;
  errors carry the path-step site context ("path-step @condition: …") and
  flow up through the three call sites in `parsePathElement`.

Cross-axis @condition coverage (R53 plan step 9).
- `ARG_CONDITION_ARGMAPPING_DUAL_BOUND`: arg-level @condition with
  argMapping coexisting with @field(name:) column binding on the same
  arg. Asserts both the GeneratedConditionFilter (column axis,
  unaffected) and the ConditionFilter (Java-param axis, renamed) shapes.
- `FIELD_CONDITION_ARGMAPPING`: field-level @condition with argMapping
  binding two Java parameters to differently-named GraphQL args.
- `TABLE_INPUT_FIELD_CONDITION_ARGMAPPING`: input-field @condition with
  argMapping binding the input-field's value to a renamed Java param.
- `CONDITION_PATH_ARGMAPPING_REJECTED`: path-step @condition with
  argMapping rejects via the new error path; reason names "path-step
  @condition" and "no GraphQL arguments are in scope".
- `TestConditionStub` gains `argConditionRenamed`, `fieldConditionRen